fix(modal): prevent horizontal scroll on mobile view, modal style (#724)
* fix(modal): prevent horizontal scroll on mobile view

* fix: more changes

* feat: misc change

--- a/projects/ng-aquila/src/modal/dialog/modal-container.component.scss
+++ b/projects/ng-aquila/src/modal/dialog/modal-container.component.scss
@@ -7,6 +7,7 @@ $action-bar-height: nx-spacer(2xl);
 :host {
     background: v(modal-background-color);
     color: v(modal-text-color);
+    margin: 0 nx-spacer(2m); // keep distance to the end of the screen
     padding: nx-spacer(3m) nx-spacer(3m) nx-spacer(4m) nx-spacer(3m);
     border-radius: nx-border-radius(s);
     box-shadow: v(shadow-large);
@@ -28,7 +29,7 @@ $action-bar-height: nx-spacer(2xl);
     max-height: inherit;
 
     @include media-breakpoint-down('small') {
-        margin: 0 nx-spacer(2xs);
+        margin: 0 nx-spacer(2xs); // keep distance to the end of the screen
         padding: nx-spacer(3m) nx-spacer(2m) nx-spacer(4m) nx-spacer(2m);
     }
 
@@ -44,6 +45,11 @@ $action-bar-height: nx-spacer(2xl);
     max-height: $max-modal-content-height;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
+
+    @include media-breakpoint-down('small') {
+        margin: 0 -#{nx-spacer(2m)};
+        padding: 0 nx-spacer(2m);
+    }
 }
 
 ::ng-deep .nx-modal__actions {
@@ -62,6 +68,12 @@ $action-bar-height: nx-spacer(2xl);
     padding: 0 nx-spacer(3m);
     border-bottom-left-radius: nx-border-radius(s);
     border-bottom-right-radius: nx-border-radius(s);
+
+    @include media-breakpoint-down('small') {
+        margin-left: -#{nx-spacer(2m)};
+        margin-right: -#{nx-spacer(2m)};
+        padding: 0 nx-spacer(2m);
+    }
 }
 
 .nx-modal__close {
